Findbugs suggested performance enhancement.